# kbounce

./: .arcconfig  .craft.ini  .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Makefile.am  Messages.sh  RULES  backgroundselector.cpp  backgroundselector.h  backgroundselector.ui  ball.cpp  ball.h  board.cpp  board.h  configure.in.in  default_theme.svgz  game.cpp  game.h  gameobject.cpp  gameobject.h  gameobjects.cpp  gameobjects.h  gamewidget.cpp  gamewidget.h  highscores.cpp  highscores.h  kbounce.cpp  kbounce.desktop  kbounce.h  kbounce.kcfg  kbounceui.rc  kjezz.cpp  kjezz.desktop  kjezz.h  kjezzball.cpp  kjezzball.desktop  kjezzui.rc  main.cpp  (+15 more)
doc/: CMakeLists.txt  index.docbook
pics/: CMakeLists.txt  Makefile.am  hi16-app-kbounce  lo16-app-kjezz.xpm  lo32-app-kjezz.xpm
po/af/: kbounce.po
po/ar/: kbounce.po
po/ar/docs/kbounce/: index.docbook
po/ast/: kbounce.po
po/be/: kbounce.po
po/bg/: kbounce.po
po/bn/: kbounce.po
po/br/: kbounce.po
po/bs/: kbounce.po
po/ca/: kbounce.po
po/ca/docs/kbounce/: index.docbook
po/ca@valencia/: kbounce.po
po/cs/: kbounce.po
po/csb/: kbounce.po
po/cy/: kbounce.po
po/da/: kbounce.po
po/de/: kbounce.po
po/de/docs/kbounce/: index.docbook
po/el/: kbounce.po
po/en_GB/: kbounce.po
po/eo/: kbounce.po
po/es/: kbounce.po
po/es/docs/kbounce/: index.docbook
po/et/: kbounce.po
po/et/docs/kbounce/: index.docbook
po/eu/: kbounce.po
po/fa/: kbounce.po
po/fi/: kbounce.po
po/fr/: kbounce.po
po/fr/docs/kbounce/: index.docbook
po/ga/: kbounce.po
po/gl/: kbounce.po
po/he/: kbounce.po
po/hi/: kbounce.po
po/hne/: kbounce.po
po/hr/: kbounce.po
po/hu/: kbounce.po
po/ia/: kbounce.po
po/id/: kbounce.po
po/is/: kbounce.po
po/it/: kbounce.po
po/it/docs/kbounce/: index.docbook
po/ja/: kbounce.po
po/ka/: kbounce.po
po/kk/: kbounce.po
po/km/: kbounce.po
po/ko/: kbounce.po
po/lt/: kbounce.po
po/lv/: kbounce.po
po/mai/: kbounce.po
po/mk/: kbounce.po
po/ml/: kbounce.po
po/mr/: kbounce.po
po/ms/: kbounce.po
po/nb/: kbounce.po
po/nds/: kbounce.po
po/ne/: kbounce.po
po/nl/: kbounce.po
po/nl/docs/kbounce/: index.docbook
po/nn/: kbounce.po
po/oc/: kbounce.po
po/pa/: kbounce.po
po/pl/: kbounce.po
po/pt/: kbounce.po
po/pt/docs/kbounce/: index.docbook
po/pt_BR/: kbounce.po
po/pt_BR/docs/kbounce/: index.docbook
po/ro/: kbounce.po
po/ru/: kbounce.po
po/sa/: kbounce.po
po/se/: kbounce.po
po/sk/: kbounce.po
po/sl/: kbounce.po
po/sl/docs/kbounce/: index.docbook
po/sq/: kbounce.po
po/sr/: kbounce.po
po/sr@ijekavian/: kbounce.po
po/sr@ijekavianlatin/: kbounce.po
po/sr@latin/: kbounce.po
po/sv/: kbounce.po
po/sv/docs/kbounce/: index.docbook
po/ta/: kbounce.po
po/te/: kbounce.po
po/tg/: kbounce.po
po/th/: kbounce.po
po/tr/: kbounce.po
po/tr/docs/kbounce/: index.docbook
po/ug/: kbounce.po
po/uk/: kbounce.po
po/uk/docs/kbounce/: index.docbook
po/vi/: kbounce.po
po/xh/: kbounce.po
po/zh_CN/: kbounce.po
po/zh_TW/: kbounce.po
sounds/: CMakeLists.txt  Makefile.am  reflect.au  seconds.au  timeout.au
src/: CMakeLists.txt  backgroundselector.cpp  backgroundselector.h  backgroundselector.ui  ball.cpp  ball.h  board.cpp  board.h  debug.h  gameobject.cpp  gameobject.h  gamewidget.cpp  gamewidget.h  kbounce.kcfg  kbounce.qrc  kbounceui.rc  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.kbounce.appdata.xml  org.kde.kbounce.desktop  renderer.cpp  renderer.h  settings.kcfgc  wall.cpp  wall.h
themes/: CMakeLists.txt  Roads.desktop  Roads.svgz  default.desktop  default_old.desktop  default_theme.svgz  egyptian_bounce.desktop  egyptian_bounce.svgz  geometry.desktop  oxygen.desktop  oxygen.svgz  roads.desktop  the_beach.desktop
