pics_DATA = \
	ball0000.png \
	ball0001.png \
	ball0002.png \
	ball0003.png \
	ball0004.png \
	ball0005.png \
	ball0006.png \
	ball0007.png \
	ball0008.png \
	ball0009.png \
	ball0010.png \
	ball0011.png \
	ball0012.png \
	ball0013.png \
	ball0014.png \
	ball0015.png \
	ball0016.png \
	ball0017.png \
	ball0018.png \
	ball0019.png \
	ball0020.png \
	ball0021.png \
	ball0022.png \
	ball0023.png \
	ball0024.png \
	tiles.png 

picsdir = $(kde_datadir)/kbounce/pics

KDE_ICON = kbounce

EXTRA_DIST = $(pics_DATA)

