
install( FILES roads.desktop roads.svgz roads_preview.png the_beach.desktop egyptian_bounce.png egyptian_bounce.svgz oxygen.desktop oxygen.svgz oxygen.png kbounce.svg geometry.desktop geometry.png the_beach.svgz default.desktop thebeach_preview.png DESTINATION  ${KDE_INSTALL_DATADIR}/kbounce/themes )

